# talkcody

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  bunfig.toml  index.html  package.json  pre-commit.sh  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: release.sh
.github/workflows/: ci.yml  release-linux-ime.yml  release-linux.yml  release-windows.yml  release.yml
apps/api/: .env.example  .gitignore  README.md  bunfig.toml  drizzle.config.ts  package.json  tsconfig.json  wrangler.toml
design/: task-messages-state.md
docs/: .env.example  .eslintrc.json  .gitignore  CLAUDE.md  biome.json  mdx-components.tsx  middleware.ts  next.config.mjs  package.json  source.config.ts
docs/app/: layout.tsx
docs/components/: theme-toggle.tsx
docs/lib/: download-config.ts  download-utils.ts  i18n.ts  layout.shared.tsx  source.ts
public/: audio-processor.worklet.js
scripts/: build-and-notarize.sh  release.sh
src/: app.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: summarize_test.rs
src-tauri/icons/: icon.icns
src-tauri/src/: analytics.rs  archive.rs  code_navigation.rs  constants.rs  database.rs  directory_tree.rs  file_search.rs  file_watcher.rs  glob.rs  http_proxy.rs  lib.rs  list_files.rs  lsp.rs  oauth_callback_server.rs  script_executor.rs  search.rs  terminal.rs  websocket.rs  window_manager.rs
src-tauri/src/git/: diff.rs  mod.rs  repository.rs  status.rs  types.rs
src/components/: chat-box.tsx  chat-history-sidebar.tsx  chat-history.tsx  chat-panel-header.tsx  chat-toolbar.test.tsx  chat-toolbar.tsx  conversation-item.test.tsx  conversation-item.tsx  conversation-list.tsx  empty-repository-state.test.tsx  empty-repository-state.tsx  file-editor.tsx  file-search.tsx  file-tabs.tsx  file-tree.tsx  initialization-screen.tsx  lsp-download-prompt.tsx  main-content.test.tsx  main-content.tsx  mode-selector.tsx  navigation-sidebar.tsx  project-dropdown.test.tsx  project-dropdown.tsx  repository-layout-terminal-toggle.test.tsx  repository-layout.tsx  toolbar-stats.tsx  update-dialog.tsx  update-notification.test.tsx  update-notification.tsx
src/constants/: editor.ts
src/contexts/: ui-navigation.tsx  window-context.tsx
src/hooks/: use-ai-completion.ts  use-conversation-edit.ts  use-conversations.ts  (+38 more)
(+652 files in other folders)
