[package]
name = "talkcody"
version = "0.1.10"
description = "AI Coding Agent"
authors = ["Kaisen Kang"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.8", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5"
tauri-plugin-log = "2.7"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
grep = "0.3"
ignore = "0.4"
rayon = "1.8"
tauri-plugin-dialog = "2.4"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-clipboard = "2.1.11"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
libsql = "0.9.29"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "blocking"], default-features = false }
url = "2.5"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
lru = "0.12"
portable-pty = "0.9"
uuid = { version = "1.11", features = ["v4"] }
tar = "0.4"
flate2 = "1.0"
# Tree-sitter for code navigation
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-typescript = "0.23"
streaming-iterator = "0.1"
sha2 = "0.10"
hex = "0.4"
regex = "1.12.2"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
dirs = "5.0"
rand = "0.8"
which = "7.0"
zip = "2.2"
# OAuth callback server
tiny_http = "0.12"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
tauri-plugin-updater = "2"
notify = "6.1"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"

[dev-dependencies]
tempfile = "3"

[[example]]
name = "summarize_test"
